tests/typechecker/fail/015-do-while.hyg
do {
    println("Hello!")
} while "test"
